# sw-reviewer

./: .gitignore  README.md  app.py  browser_tools.py  pyproject.toml  requirements.txt  reviewer_state.db  run_all.py  run_slack.py  run_watcher.py  run_web.py
AI/: AGENT_WORKFLOW.md  GUIDELINES_NORMALIZED.md  IMPLEMENTATION_BLUEPRINT.md  MASTER_PLAN.md  MASTER_TODO.md  README.md
AI/tasks/T01_policy-schema/: changes.md  next.md  summary.md
AI/tasks/T02_data-contracts/: changes.md  next.md  summary.md
AI/templates/: README.md  review_verdict_template.typ  run-report-template.md  task-context-template.md
artifacts/b43fd66a/: evidence_index.json  verdict.json
artifacts/rev-cli-001/: evidence_index.json  verdict.json
artifacts/rev-web-001/: evidence_index.json  verdict.json
prompts/: 00_system_prompt.md  01_review_workflow.md  02_general_rules.md  03_project_type_checks.md  04_auth_and_testing.md  05_readme_review_prompt.md  06_decision_output_prompt.md  07_response_templates.md  README.md  checks.md  demo_guidelines.md  precheck.md  reviewer.md
src/sw_reviewer/: __init__.py  app.py  config.py  log_config.py  models.py  orchestrator.py  slack.py  state.py
sw_reviewer/: agent.py  browser_tools.py  config.py  history.py  models.py  pdf_report.py  pipeline.py  pipeline_agent.py  prompts.py  review_tools.py  shipwrights_tools.py  usage.py
sw_reviewer/interfaces/: web.py
sw_reviewer/templates/: review_report.typ
tests/: test_app.py  test_models.py  test_orchestrator.py  test_policy_engine.py  test_reporting.py  test_slack_commands.py  test_storage.py
(+58 files in other folders)
