[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sw-reviewer"
version = "0.1.0"
description = "Shipwright AI Reviewer — automated review pipeline for web and CLI projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-ai>=0.0.13",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.0",
    "playwright>=1.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "anyio[trio]>=4.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sw_reviewer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true
